# Noctis

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt
Editor/: CMakeLists.txt
Editor/assets/shaders/: triangle.frag  triangle.vert  triangle.vert.spv
Editor/src/: Editor.cpp
Noctis/: CMakeLists.txt
Noctis/src/: Noctis.h  nocpch.h
Noctis/src/Engine/Core/: Application.cpp  Application.h  Base.h  EntryPoint.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Window.h
Noctis/src/Engine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Noctis/src/Engine/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Noctis/src/Engine/Renderer/: Renderer.cpp  Renderer.h  RendererAPI.h  RendererContext.cpp  RendererContext.h
Noctis/src/Platform/MacOS/: MacOSWindow.cpp  MacOSWindow.h
Noctis/src/Platform/Vulkan/: Vulkan.h  VulkanContext.cpp  VulkanContext.h  VulkanDebugUtils.cpp  VulkanDebugUtils.h  VulkanDevice.cpp  VulkanDevice.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSwapchain.cpp  VulkanSwapchain.h
